--- a/train-ticket/src/main/resources/application.properties
+++ b/train-ticket/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# Server configuration
+server.port=8080
 
+# Logging configuration
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.com.shivi=DEBUG
